Fix issue with anchor elements clipping through eachother

--- a/styles/src/blog_paging.css
+++ b/styles/src/blog_paging.css
@@ -31,7 +31,7 @@
         transition: transform 0.5s;
     }
 
-a::before, a::after {
+.pagination a::before, .pagination a::after {
     box-sizing: inherit;
     content: "";
     position: absolute;
